[package]
name = "goose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
b2-client = { version = "0.1.2", features = ["with_hyper"] }
data-encoding = "2.3.2"
error-chain = "0.12.4"
ring = "0.16.20"
uuid = { version = "0.8.2", features = ["v4"] }