[package]
name = "goose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
data-encoding = "2.3.2"
error-chain = "0.12.4"
ring = "0.16.20"
sha1 = "0.10.1"
uuid = { version = "0.8.2", features = ["v4"] }

# AWS
aws-config = "0.10.1"
aws-sdk-s3 = "0.10.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"