[package]
name = "goose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
clap = { version = "3.1.12", features = ["derive"] }
data-encoding = "2.3.2"
dialoguer = "0.10.0"
error-chain = "0.12.4"
rand = "0.8.5"
reqwest = "0.11.10"
ring = "0.16.20"
rust-argon2 = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha1 = "0.10.1"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
zeroize = "1.4.3"

# AWS
aws-config = "0.10.1"
aws-sdk-s3 = "0.10.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"